syntax = "proto3";

package java.util.concurrent;

import "java.util.proto";
import "org.wildfly.clustering.marshalling.protostream.proto";

// IDs: 60 - 79

/**
 * @TypeId(60)
 */
message ConcurrentHashMap {
	repeated	org.wildfly.clustering.marshalling.protostream.Any	key	= 1;
	repeated	org.wildfly.clustering.marshalling.protostream.Any	value	= 2;
}

/**
 * @TypeId(61)
 */
message KeySetView {
	repeated	org.wildfly.clustering.marshalling.protostream.Any	element	= 1;
}

/**
 * @TypeId(62)
 */
message ConcurrentLinkedDeque {
	repeated	org.wildfly.clustering.marshalling.protostream.Any	element	= 1;
}

/**
 * @TypeId(63)
 */
message ConcurrentLinkedQueue {
	repeated	org.wildfly.clustering.marshalling.protostream.Any	element	= 1;
}

/**
 * @TypeId(64)
 */
message ConcurrentSkipListMap {
	repeated	org.wildfly.clustering.marshalling.protostream.Any	key	= 1;
	repeated	org.wildfly.clustering.marshalling.protostream.Any	value	= 2;
	bool	reverse	= 3;
	org.wildfly.clustering.marshalling.protostream.Any	comparator	= 4;
}

/**
 * @TypeId(65)
 */
message ConcurrentSkipListSet {
	repeated	org.wildfly.clustering.marshalling.protostream.Any	element	= 1;
	bool	reverse	= 2;
	org.wildfly.clustering.marshalling.protostream.Any	comparator	= 3;
}

/**
 * @TypeId(66)
 */
message	CopyOnWriteArrayList {
	repeated	org.wildfly.clustering.marshalling.protostream.Any	element	= 1;
}

/**
 * @TypeId(67)
 */
message	CopyOnWriteArraySet {
	repeated	org.wildfly.clustering.marshalling.protostream.Any	element	= 1;
}

/**
 * @TypeId(68)
 */
enum TimeUnit {
	NANOSECONDS	= 0;
	MICROSECONDS	= 1;
	MILLISECONDS	= 2;
	SECONDS	= 3;
	MINUTES	= 4;
	HOURS	= 5;
	DAYS	= 6;
}
